# gopro-lib-node.gl

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  configure.py
libnodegl/src/backends/d3d12/: .editorconfig  api_d3d12.c  api_d3d12.cpp  buffer_d3d12.cpp  buffer_d3d12.h  d3d12_declare_agility_SDK.c  format_d3d12.H  format_d3d12.cpp  glslang_utils.cpp  gpu_ctx_d3d12.cpp  gpu_ctx_d3d12.h  hwmap_d3d12.cpp  hwmap_vaapi_d3d12.cpp  meson.build  pipeline_d3d12.cpp  pipeline_d3d12.h  program_d3d12.cpp  program_d3d12.h  rendertarget_d3d12.cpp  rendertarget_d3d12.h  surface_util_d3d12.cpp  surface_util_d3d12.h  swapchain_util_d3d12.cpp  swapchain_util_d3d12.h  texture_d3d12.cpp  texture_d3d12.h  topology_d3d12.cpp  topology_d3d12.h  util_d3d12.cpp  util_d3d12.h  vkcontext.cpp  ycbcr_sampler_d3d12.cpp
libnodegl/src/backends/d3d12/data/: convolve.comp  d3dBlitOp.frag  d3dBlitOp.vert  drawMesh.frag  drawMesh.vert  matrixMultiply.comp
libnodegl/src/backends/d3d12/impl/: Config.h  D3DBlitOp.cpp  D3DBlitOp.h  D3DBuffer.cpp  D3DBuffer.h  D3DBufferUtils.h  D3DCommandList.cpp  D3DCommandList.h  D3DCommandQueue.cpp  D3DCommandQueue.h  D3DComputePass.h  D3DComputePipeline.cpp  D3DComputePipeline.h  D3DData.cpp  D3DData.h  D3DDescriptorHandle.cpp  D3DDescriptorHandle.h  D3DDescriptorHeap.cpp  D3DDescriptorHeap.h  D3DDevice.cpp  D3DDevice.h  D3DFence.cpp  D3DFence.h  D3DFramebuffer.cpp  D3DFramebuffer.h  D3DGraphics.cpp  D3DGraphics.h  D3DGraphicsContext.cpp  D3DGraphicsContext.h  D3DGraphicsCore.h  D3DGraphicsPipeline.cpp  D3DGraphicsPipeline.h  D3DPipeline.cpp  (+28 more)
(+319 files in other folders)
