lib_src += files(
      'api_d3d12.cpp',
      'buffer_d3d12.cpp',
      'buffer_d3d12_impl.cpp',
      'command_list_d3d12.cpp',
      'device_d3d12.cpp',
      'fence_d3d12.cpp',
      'format_d3d12.cpp',
      'glslang_utils.cpp',
      'gpu_ctx_d3d12.cpp',
      'graphics_context_d3d12.cpp',
      'hwmap_d3d12.cpp',
      'pipeline_d3d12.cpp',
      'program_d3d12.cpp',
      'rendertarget_d3d12.cpp',
      'surface_d3d12.cpp',
      'texture_d3d12.cpp',
      'utils_d3d12.cpp',
      'ycbcr_sampler_d3d12.cpp',
    )